--- a/SJ - Intro to DS in Python 4.ipynb
+++ b/SJ - Intro to DS in Python 4.ipynb
@@ -1314,7 +1314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 19,
    "metadata": {
     "collapsed": true
    },
@@ -1329,14 +1329,93 @@
     "    df = df.reset_index()\n",
     "    df = df[['Quarter', 'GDP']]\n",
     "    \n",
-    "    recession_start = []\n",
+    "    recession_end = []\n",
     "    for i in range(len(df) - 4):\n",
-    "        if ((df.iloc[i][1] > df.iloc[i+1][1]) & (df.iloc[i+1][1] > df.iloc[i+2][1])):\n",
-    "            recession_start.append(df.iloc[i][0])\n",
+    "        if ((df.iloc[i][1] > df.iloc[i+1][1]) & (df.iloc[i+1][1] > df.iloc[i+2][1]) & (df.iloc[i+2][1] < df.iloc[i+3][1]) & (df.iloc[i+3][1] < df.iloc[i+4][1])):\n",
+    "            recession_end.append([df.iloc[i][0],df.iloc[i+1][0],df.iloc[i+2][0],df.iloc[i+3][0],df.iloc[i+4][0]])\n",
     "    \n",
-    "    answer3 = recession_start[0]\n",
+    "    answer3 = recession_end[0][4]\n",
     "    \n",
     "    return answer3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2009q4'"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_recession_end()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def get_recession_bottom():\n",
+    "    \n",
+    "    df = pd.read_excel('../Data src/gdplev.xls', skiprows = 7)\n",
+    "    df = df[['Unnamed: 4','Unnamed: 5']]\n",
+    "    df.columns = ['Quarter','GDP']\n",
+    "    df = df.iloc[212:]\n",
+    "    df = df.reset_index()\n",
+    "    df = df[['Quarter','GDP']]\n",
+    "    \n",
+    "    recession_end = []\n",
+    "    for i in range(len(df) - 4):\n",
+    "        if ((df.iloc[i][1] > df.iloc[i+1][1]) & (df.iloc[i+1][1] > df.iloc[i+2][1]) & (df.iloc[i+2][1] < df.iloc[i+3][1]) & (df.iloc[i+3][1] < df.iloc[i+4][1])):\n",
+    "            recession_end.append([df.iloc[i][0],df.iloc[i+1][0],df.iloc[i+2][0],df.iloc[i+3][0],df.iloc[i+4][0]])\n",
+    "            \n",
+    "    answer4 = recession_end[0][2]\n",
+    "    \n",
+    "    return answer4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'2009q2'"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_recession_bottom()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Converts the housing data to quarters and returns it as mean values in a dataframe. This dataframe should be a dataframe with columns for 2000q1 through 2016q3, and should have a multi-index in the shape of [\"State\",\"RegionName\"].\n",
+    "    \n",
+    "Note: Quarters are defined in the assignment description, they are not arbitrary three month periods.\n",
+    "    \n",
+    "The resulting dataframe should have 67 columns, and 10,730 rows.\n",
+    "    "
    ]
   },
   {
@@ -1346,7 +1425,17 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "def convert_to_quarters():\n",
+    "    \n",
+    "    df = pd.read_csv('../Data src/City_Zhvi_AllHomes.csv')\n",
+    "    df = pd.drop(df.columns[[0] + list(range(3, 51))], axis = 1)\n",
+    "    df2 = pd.DataFrame(df[['State', 'RegionName']])\n",
+    "    \n",
+    "    for year in range(2000, 2016):\n",
+    "        df2[str(year) + 'q1'] = df[[str(year) + '-01', str(year) + '-02', str(year) + '-03']].mean(axis = 1)\n",
+    "        df2[str(year) + 'q2'] = df[[str(year) + '-04', str(year) + '-05']]"
+   ]
   }
  ],
  "metadata": {
